Definition von „linearer Operator“
Die Definition stammt aus dem Wikipedia‐Artikel „Linearer Operator“


git-svn-id: https://svn.lug-jena.de/uni-skripte@1617 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -4924,6 +4924,19 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
 \section{Beschränkte und kompakte Operatoren}
 \subsection{Beschränkte Operatoren}
 
+Ein linearer Operator ist nichts anderes als eine lineare Abbildung -- klingt
+halt nur etwas hochtrabender.
+
+Es seien $X$ und $Y$ reelle (komplexe) Vektorräume. Ein Operator $T$ von $X$
+in $Y$ heißt linearer Operator, wenn für alle $x\in X$ und $\lambda\in\R$
+(oder $\lambda\in\C$) die folgenden Bedingungen gelten:
+\begin{itemize}
+ \item $T$ ist homogen (antihomogen): $T(\lambda) = \lambda T(x)$ (bzw.
+  $T(\lambda x) = \overline{\lambda}T(x))$ im komplexen Fall)
+
+ \item $T$ ist additiv: $T(x + y) = T(x) + T(y)$.
+\end{itemize}
+
 \begin{defini}
   Seien $(E, \norm{\cdot}_{E})$ und $(F, \norm{\cdot}_{F})$ zwei normierte
   Vektorräume. Der lineare Operator $A\colon E\rightarrow F$ heißt
