--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -5396,6 +5396,9 @@ in $Y$ heißt linearer Operator, wenn für alle $x\in X$ und $\lambda\in\R$
   Bezeichnung: $(A\in K(E,F))$.
 \end{defini}
 
+\todo{Einen Befehl für kompakte Operatoren.}
+% \newcommand*{\kompOp}[1]{\mathcal{K}(#1)}
+
 \begin{bemerk}
   äquivalent: $B_{E} := \{x\in E\colon \norm{x}_{E}\leq 1\}$
   \begin{itemize}
