Notizen zum 5. Kapitel
git-svn-id: https://svn.lug-jena.de/uni-skripte@1624 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -11289,7 +11289,7 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
    \item $T_{1} =T_{2}$ auf $\Omega'$ $\Longleftrightarrow$ $T_{1}(\phi)
     = T_{2}(\phi) \forall \phi \in D(\Omega')$
    \item $x\in \Omega, U(x)$ heißt \highl{Umgebung} von $x$, falls  $x\in
-    U(X)$, $U(x)$ offene Menge
+    U(x)$, $U(x)$ offene Menge
   \end{itemize}
 \end{bemerk}
 
@@ -11348,8 +11348,8 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
 \end{satz}
 
 Die \highl{Nulldistribution}~$0\in D'(\Omega)$ ist jene Distribution $T\in
-D'(\Omega)$, die $T(\phi) = 0$ ist für alle $\phi\in D(\Omega)$. Man sagt
-auch, dass die Distribution \highl{verschwindet}.
+D'(\Omega)$, die für alle $\phi\in D(\Omega)$ den Wert $T(\phi) = 0$ hat. Man
+sagt auch, dass die Distribution \highl{verschwindet}.
 \todo{besser formulieren}
 
 \begin{defini}
@@ -11363,6 +11363,9 @@ auch, dass die Distribution \highl{verschwindet}.
        \forall \text{~Umgebungen~} U(x) \colon (T)_{U(x)\cap\Omega} \ne0\}
   \end{gather*}
 \end{defini}
+
+\help{Der Träger für Funktionen war der Abschluss der Menge. Das ist doch aber
+  nicht das gleiche wie die Punkte des Abschluss' zu betrachten.}
 
 \begin{bemerk}
   \label{bem:distri-traeger}
@@ -11506,6 +11509,8 @@ auch, dass die Distribution \highl{verschwindet}.
       (D^{\alpha}T)(\phi) &:= (-1)^{\alpha} T(D^{\alpha}\phi) &&\phi
       \in D(\Omega)
     \end{align*}
+    \help{Soll das $(-1)^{\abs{\alpha}}$ sein?}
+
    \item \underline{Multiplikation} mit $a\in C^{\infty}(\Omega)$
     \begin{align*}
       (aT)(\phi) &:= T(a\phi)&&\forall\phi\in D(\Omega)
@@ -12198,6 +12203,7 @@ Wunsch: Fouriertransformationen sinnvoll auf Distributionen übertragen:
     \norm{\phi}_{k,l}
        = \sup_{x\in\R^{n}} (1+\abs{x}^{k})
        \sum_{\abs{\alpha}\leq l} \abs{D^{\alpha} \phi(x)}
+       < \infty
   \end{gather*}
 
   \begin{gather}
@@ -12213,7 +12219,7 @@ Wunsch: Fouriertransformationen sinnvoll auf Distributionen übertragen:
 
 \begin{bemerk}
   \begin{enumerate}
-   \item Äquivalente Definition: $\phi\in S(\R^{n})$ \gdwdef für alle
+   \item Äquivalente Definition: $\phi\in S(\R^{n})$ \gdwdef{} für alle
     $k\in\N_{0}$ und alle $\alpha\in\N_{0}^{n}$ ist
     $\sup_{x\in\R^{n}} \abs{x}^{k} \abs{D^{\alpha}\phi(x)} = c_{k,\alpha}
     <\infty$
@@ -12252,7 +12258,7 @@ Wunsch: Fouriertransformationen sinnvoll auf Distributionen übertragen:
    \item
     $\norm{\phi}_{k,l}$ ist eine Norma auf $S(\R^{n})$, $S(\R^{n})$
     \emph{nicht} vollständig bzgl. einer festen Norm $\norm{\phi}_{k,l}$,
-    aber $S(\R^{n})$ ist vollständig bzgl. der konvergenz in $S$
+    aber $S(\R^{n})$ ist vollständig bzgl. der Konvergenz in $S$
   \end{enumerate}
 \end{bemerk}
 
@@ -12324,7 +12330,8 @@ Wunsch: Fouriertransformationen sinnvoll auf Distributionen übertragen:
    \item $b\in\R^{n}, A$ reguläre $n\times n$-Matrix, $\phi\in S(\R^{n})
     \Rightarrow \phi(Ax+b) \in S(\R^{n}), \phi_{j} \xrightarrow[S]{} \phi
     \Rightarrow \phi_{j}(Ax+b) \xrightarrow[S]{} \phi(Ax+b)$
-    \help{Ist mit $\phi(Ax+b)$ eigentlich $\phi\circ(Ax+b)$ gemeint?}
+    \help{Ist mit $\phi(Ax+b)$ eigentlich $\phi\circ(Ax+b)$ gemeint? Es ist
+      $\phi(Ax+b)$ gemeint.}
   \end{enumerate}
 
   \begin{proof}
@@ -12408,7 +12415,7 @@ S'(\R^{n})$.
   \begin{enumerate}
    \item $T\in S'(\R^{n}) \Longleftrightarrow$
     \begin{enumerate}
-     \item $T$ ist linear und $T:S(\R^{n}) \rightarrow \C$
+     \item $T$ ist linear und $T\colon S(\R^{n}) \rightarrow \C$
      \item $\exists k,l\in \N_{0} \exists c>0 \forall \phi\in S(\R^{n}):$
       \begin{gather}\label{eq:37}
         \abs{T(\phi)} \leq c \norm{\phi}_{k,l} = c\sup_{x\in\R^{n}}
@@ -12517,7 +12524,7 @@ S'(\R^{n})$.
       \end{align*}
       Mithilfe von \autoref{satz:7} folgt daraus, dass $f\in S'(\R^{n})$
     \end{proof}
-   \item Ist $f$ ein messbares Fuktional und $c,m$ mit $\abs{f(x)} \leq
+   \item Ist $f$ ein messbares Funktional und $c,m$ mit $\abs{f(x)} \leq
     c(1+\abs{x}^{m})$ existieren, dann ist
     \begin{gather*}
       f(\phi) := \int_{\R^{n}} f(x)\phi(x)\,dx\quad\in S'(\R^{n})
@@ -12556,7 +12563,7 @@ S'(\R^{n})$.
     \begin{align*}
       f(\phi) &= \int_{-\infty}^{\infty} \ez^{x}\sin \ez^{x} \phi(x)\,dx\\
       &= \int_{-\infty}^{\infty} (\cos \ez^{x})'\phi(x)\,dx\\
-      &= -\int_{-\infty}^{\infty} \cos \ez^{x} \phi'(\phi)\,dx&&\text{mit
+      &= -\int_{-\infty}^{\infty} \cos \ez^{x} \phi'(x)\,dx&&\text{mit
          partieller Integration}\help{$\phi$ ist Testfunktion und damit auf
          dem Rand 0 -- irgendwie wichtig}
     \end{align*}
@@ -12608,12 +12615,18 @@ lassen sich als langsam wachsende Distributionen interpretieren.
 \begin{defini}[Fouriertransformation]\label{def:5.2.3/1}
   $\phi\in S(\R^{n})$
   \begin{gather*}
-    \hat{\phi} = (F\phi)(\xi) := \frac{1}{(2\pi)^{\nicefrac{n}{2}}}
-       \int_{\R^{n}} \phi(x) \ez^{-ix\xi}\,dx
+    \hat{\phi}(\xi) = (F\phi)(\xi)
+       := (2\pi)^{-\frac{n}{2}}
+       \int_{\R^{n}} \phi(x) \ez^{-\ie x\xi}\,dx
   \end{gather*}
   mit $x\xi = \sum_{j=1}^{n} x_{j}\xi_{j}$ für $x,\xi\in\R^{n}$ heißt
   \highl{Fouriertransformation} von $\phi$
 \end{defini}
+
+\todo{Einen Befehl für die Fouriertransformation erstellen,
+  \texttt{ftr}$\phi$ statt \texttt{hat}.}
+\todo{Operator für die Fouriertransformation \texttt{FT}=$\operatorname{F}$.
+  Das $F$ muss aufrecht sein.}
 
 \begin{bemerk}
   \begin{gather*}
@@ -12691,8 +12704,10 @@ lassen sich als langsam wachsende Distributionen interpretieren.
     $b\in\R^{n}$
     \begin{gather*}
       F\bigl(\phi(A\cdot+b)\bigr) = \frac{1}{\abs{\det A}}
-         \ez^{iA^{-1}b\cdot} (F\phi)((A^{-1})^{T}\cdot)
+         \ez^{iA^{-1}b\cdot} (F\phi)((A^{-1})^{t}\cdot)
     \end{gather*}
+    \todo{Befehl für Transponierung $t$ mit Prüfung auf \texttt{scriptstyle}}
+
    \item $\phi_{j}\xrightarrow{S}\phi$ $\Rightarrow$ $F\phi_{j}
     \xrightarrow{S} F\phi$
   \end{enumerate}
@@ -13103,7 +13118,7 @@ lassen sich als langsam wachsende Distributionen interpretieren.
     \begin{gather*}
       Ff(\xi)
          = \lim_{R\rightarrow\infty} (2\pi)^{-\frac{n}{2}}
-         \int_{\abs{x}\leq R} f(x) \ez^{-\ie x\xi}\diff x
+         \int_{\mathclap{\abs{x}\leq R}} f(x) \ez^{-\ie x\xi}\diff x
     \end{gather*}
     (Konvergenz in $L_{2}(\R^{n})$!)
   \end{enumerate}
