Aenderungen am zweiten Kapitel eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@1628 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -742,7 +742,7 @@ Dann gilt,
   \end{proof}
 \end{satz}
 
-\begin{satz}[Konstruktion einer Stammfunktion]
+\begin{satz}[Konstruktion einer Stammfunktion]\label{satz:27}
   Die Funktion $f\colon\Omega \rightarrow \C$ sei stetig und das
   Kurvenintegral wegunabhängig. Außerdem setzen wir:
   \begin{gather*}
@@ -771,6 +771,135 @@ Dann gilt,
     lässt sich \autoref{satz:15} anwenden und es gilt, dass $F$ holomorph ist.
     Weiter gilt daher, dass $F'(z) = U_x + iV_x = u + iv = f$. Also ist $F$
     auch Stammfunktion zu $f$.
+  \end{proof}
+\end{satz}
+
+\begin{folg}\label{folg:21}
+  Falls $\Omega$ ein sternförmiges Gebiet und $f$ holomorph in $\Omega$ ist,
+  dann besitzt $f$ immer eine holomorphe Stammfunktion $F$ in $\Omega$ und für
+  jeden geschlossenen Weg $\gamma \subset \Omega$ gilt: $\int_{\gamma}
+  f(z)\,dz = 0$.
+\end{folg}
+
+\begin{defini}
+  Wir setzen
+  \begin{gather*}
+    \Omega := \C\setminus (\R^- \cup \{0\}) =\{z \in \C\colon z = re^{i\phi},
+       r > 0,  -\pi < \phi < \pi \}
+  \end{gather*}
+  und nennen dies die "`geschlitzte komplexe Ebene"', die trivialerweise
+  sternförmig bezüglich  $x \in \R$ ist. Außerdem ist $f(z) = \frac{1}{z}$
+  holomorph in $\Omega$. Damit muss nach \autoref{satz:27} bzw.
+  \autoref{folg:21} eine holomorphe Stammfunktion $F$ in $\Omega$ existieren:
+  \begin{gather*}
+    F(z) := \int_{\gamma} \frac{1}{z}\,dz = \int_{1}^{r} \frac{1}{z}\,dz +
+       \int_{r}^{z} \frac{1}{z}\,dz= \int_{1}^{r} \frac{dt}{t}+
+       \int_{0}^{\phi} \frac{ire^{it}}{re^{it}}= \ln r+i\phi
+  \end{gather*}
+  Diese Stammfunktion erfüllt $F(1) = 0$ und wir nennen sie \highl{Hauptzweig
+  des Logarithmus}.
+
+  Somit ist der $\ln$ definiert als:
+  \begin{gather*}
+    \ln z:= \int_{1}^{z}\frac{dw}{w}= \ln r+i\phi\qquad\text{für }
+       z=re^{i\phi}, r>0, -\pi<\phi<\pi
+  \end{gather*}
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $e^{\ln(z)} = z$ für alle $z \in \C\setminus (\R^- \cup \{0\})$
+   \item $\ln(e^w) = w$ für alle $w \in \C$ mit $\abs{\Im(w)} < \pi$
+  \end{enumerate}
+\end{bemerk}
+
+\begin{defini}
+  Sei $\Omega$ ein einfaches Gebiet mit $0 \notin \Omega$ und $F$ holomorph in
+  $\Omega$. Dann heißt $F$ \highl{Zweig des Logarithmus}, wenn gilt
+  \begin{gather*}
+    e^{F(z)} = z \qquad \forall z \in \Omega$
+  \end{gather*}
+\end{defini}
+
+\begin{satz}[Zweige des Logarithmus]
+  Zu jedem einfachen Gebiet $\Omega$ mit $0 \notin \Omega$ gibt es unendlich
+  viele Zweige des Logarithmus. Sie unterscheiden sich um ganzzahlige
+  Vielfache von $2\pi i$.
+  \begin{proof}
+    Jede komplexe Zahl $z = re^{i\phi}$ besitzt unendlich viele Darstellungen
+    der Form $z = re^{i(\phi + 2k\pi)}$ mit $k \in \Z$. Daher ist $i\phi +
+    2k\pi i$ mit $k \in \Z$ die Darstellung der Zweige des Logarithmus.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}[a)]
+   \item Sei $\Omega$ die geschlossene Ebene. Dann hat $F(z)=\ln z$ die
+    Eigenschaft $e^{F(z)}= e^{\ln z}=z$. Somit ist der Hauptzweig auch ein
+    Zweige des Logarithmus.
+   \item Für $F(z)= \ln z+2k\pi i$ folgt, $e^{F(z)}= e^{\ln z+2k\pi i}= e^{\ln
+    z} e^{2k\pi i}= z$. Also ist $F$ ein Zweig des Logarithmus in der
+    \highl[Ebene!geschichtete]{geschichteten Ebene} (vgl. auch
+    \textsc{Riemann}"~Schichten).
+   \item In $\C \setminus (\R^- \cup \{0\})$ gibt es genau zwei holomorphe
+    Funktionen $f_1, f_2$ mit $(f_1(z))^2 = z$ bzw. $(f_2(z))^2 = z$. Diese
+    heißen \highl{Zweige der Quadratwurzel} und für $z = re^{i\phi}$ lauten
+    diese:
+    \begin{align*}
+      f_1(z) &= \sqrt{z} = z^{\frac{1}{2}} = e^{\frac{1}{2} \ln(z)} =
+	 e^{\frac{1}{2} (\ln(r) + i\phi)} = \sqrt{r} e^{i\frac{\phi}{2}}\\
+      f_2(z) &= \sqrt{z} = z^{\frac{1}{2}} = e^{\frac{1}{2} (\ln(z) + 2\pi i)}
+	 = e^{\frac{1}{2} (\ln(r) + i\phi + 2\pi i)} = \sqrt{r} e^{i
+	 (\frac{\phi}{2} + \pi)}
+    \end{align*}
+   \item Funktionen der Form $z^{k}$ mit $k\in\Z$, trigonometrische,
+    hyperbolische Funktionen sowie $e^{z}$ sind eindeutige Funktionen.
+   \item In $z$ sind die allgemeine Exponentialfunktion $a^{z}:= e^{z\ln a}$
+    mit $a\in\C\setminus\{0\}$ und die allgemeine Potenzfunktion $z^{\alpha}:=
+    e^{\ln z^{\alpha}}= e^{\alpha\ln z}$ mit $\alpha\in\C$ \emph{nicht}
+    eindeutig. Das heißt, zu ihnen gehören mehrere Zweige (i.\,A. unendlich
+    viele). Speziell hat $\sqrt[n]{z} = z^{\nicefrac{1}{n}}$ mit
+    $n\in\N\setminus\{0\}$ genau $n$ Zweige.
+   \item Doch für $a=e$ ist per Konvention $e^{z}:= \sum_{n=0}^{\infty}
+    \frac{z^{n}}{n!}$ eindeutig definiert. Entsprechend sind dann:
+    \begin{align*}
+      \sinh z &:= \frac{e^{z}-e^{-z}}{2} & \cosh z&:= \frac{e^{z}+e^{-z}}{2}\\
+      \sin z  &:= \frac{e^{iz}-e^{-iz}}{2} & \cos z &:= \frac{e^{iz}+e^{-iz}}{2}
+    \end{align*}
+    eindeutig. Analog definiert man für $k\in\Z$ die eindeutige Potenzfunktion:
+    \begin{gather*}
+      z^{k}:= z\cdot z\cdot\dotso \cdot z\neq e^{k\ln z}
+    \end{gather*}
+  \end{enumerate}
+\end{bemerk}
+
+\begin{defini}
+  Die Funktionenschaar $\{f_n\}^{\infty}_{n=0}$ konvergiert genau dann kompakt
+  gegen $f$, wenn $f_n\colon \Omega \rightarrow \C$ für alle  $n \in \N$
+  stetig sind und außerdem $\{f_n\}^{\infty}_{n=0}$ gleichmäßig auf jeder
+  kompakten Teilmenge von $\Omega$ gegen $f$ konvergiert. Wir schreiben: $f_n
+  \xrightarrow[]{kompakt} f$.
+\end{defini}
+
+\begin{satz}[Satz über die kompakte Konvergenz]
+  Es gelte $f_n \xrightarrow[]{kompakt} f$. Dann ist auch $f$ stetig auf
+  $\Omega$ und außerdem gilt dann:
+  \begin{gather*}
+    \int_{\gamma} f_n(z)\,dz \xrightarrow{n \rightarrow \infty} \int_{\gamma}
+       f(z)\,dz
+  \end{gather*}
+  \begin{proof}
+    Sei $K \subseteq \Omega$ eine kompakte Menge. Dann konvergiert
+    $\{f_n\}^{\infty}_{n=0}$ laut Voraussetzung auf $K$ gleichmäßig gegen $f$.
+    Dann gilt (wie früher im Reellen), dass $f$ auf $K$ stetig ist. Da $K$
+    beliebig war, ist $f$ folglich in jedem Punkt $x \in \Omega$ stetig.
+    Weiterhin gilt, weil $\gamma$ eine kompakte Menge ist, folgende Rechnung:
+    \begin{gather*}
+	0 \leq \abs[\big]{\int_{\gamma} f_n(z)\,dz - \int_{\gamma} f(z)\,dz} =
+	 \abs[\big]{\int_{\gamma} f_n(z) - f(z)\,dz}\leq \sup_{z \in \gamma}
+	 \abs{f_n(z) - f(z)} \cdot L(\gamma) \xrightarrow{n \rightarrow
+	 \infty} 0
+    \end{gather*}
   \end{proof}
 \end{satz}
 
