--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -1473,11 +1473,20 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
    \item $\int_{\gamma} \frac{z}{(z^{2}+4)^{2}}\,dz$ mit
     $\gamma=\overline{z_{1}z_{2}}$ Strecke von $z_{1}$ nach $z_{2}$
   \end{enumerate}
- \item Mit Hilfe der Cauchy"=Integralformel (für $f$ bzw. $f^{(n)}$) bestimme
+%Aufgabe 30
+  \item Mit Hilfe der Cauchy"=Integralformel (für $f$ bzw. $f^{(n)}$) bestimme
   man
   \begin{gather*}
     \int_{\abs{z-\nicefrac{3}{2}}=1} \frac{e^{z}}{z(z-1)^{3}}\,dz
   \end{gather*}
+  Man nimmt die $n$"~ten Ableitungen der Cauchyschen Integralformel. Es ist
+  $\frac{f^{(n)}(z_{0})}{n!}= \frac{1}{2\pi i} \int_{C_{r}(z_{0})}
+  \frac{f(w)}{(w-z_{0})^{n+1}}\,dw$ sowie $f(z)=\frac{e^{z}}{z}, f'(z)=
+  \frac{e^{z}}{z}- \frac{e^{z}}{z^{2}}, f''(z)=
+  \frac{e^{z}}{z}-2\frac{e^{z}}{z^{2}}+ 2\frac{e^{z}}{z^{3}}$. Also haben wir
+  $\int_{\abs{z-\nicefrac{3}{2}}=1} \frac{\frac{e^{z}}{z}}{(z-1)^{2+1}}\,dz =
+  \frac{2\pi i}{2!}f''(1)= \pi$.
+  % Aufgabe 31
  \item Man berechne
   \begin{gather*}
     \int_{\partial E} z^{2}\,dz+z^{-2}\,dy
@@ -1500,9 +1509,59 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
    \item $\sum_{k=0}^{\infty} \left(\frac{3k^{2}+k}{2k^{2}+1}\right)^{k} z^{k}$
    \item $\sum_{k=0}^{\infty} \frac{n!}{3^{n} (2n)!} (z+1)^{n}$
   \end{enumerate}
+  %Aufgabe 35
  \item Man bestimme die Potenzreihenentwicklung von $f$ um $z_{0}$:
   \begin{enumerate}[a)]
-   \item $f(z)= \frac{3z^{2}+1}{z+1}, z_{0}=2, z_{0}=i$
+   \item $f(z)= \frac{3z^{2}+1}{z+1}, z_{0}=2, z_{0}=i$\\
+    Für $z_{0}=2$ ist $f(z)= \frac{13}{3} +\frac{23}{9}(z-2)+
+    \sum_{k=2}^{\infty} (-1)^{k} \frac{4}{3^{k+1}} (z-2)^{k}$ mit $\rho=3$.
+    Denn wir haben $f(z)= \frac{3z^{2}+1}{z+1}$ ist für $z\neq-1$ holomorph.
+    Der Konvergenzradius ergibt sich durch $\rho=2-(-1)$. Denn $-1$ ist eine
+    isolierte Singularität. Potenzreihenentwicklung: $\frac{1}{z+1}=
+    \frac{1}{(z-2)+3}= \frac{1}{3} \frac{1}{\frac{z-2}{3}+1} = \frac{1}{3}
+    \frac{1}{1-(-\frac{z-2}{3})}= \frac{1}{3} \sum_{n=0}^{\infty}
+    \frac{(-1)^{n}}{3^{n}}(z-2)^{n}$. Weiter haben wir $f_{2}= 3z^{2}+1=
+    3((z-2)+2)^{2}+1= 3((z-2)^{2}+4(z-2)+4)+1= 3(z-2)^{2}+12(z-2)+13$ und es
+    ist $f=f_{2}\sum_{n=0}^{\infty} \frac{(-1)^{n}}{3^{n+1}} (z-2)^{n}$.\\
+    Für $z_{0}=i$ ist $f(z)= (-1+i)+ (3+2i)(z-1)+\sum_{n=2}^{\infty}
+    \frac{4(-1)^{n}}{(1+i)^{n+1}}(z-i)^{n}$ und $\rho=\sqrt{2}$.
+    \begin{align*}
+      f_{1} &= 3z^{2}+1= 3(z-i)^{2}+6i(z-i)-2\\
+      3z^{2}+1 &= a_{2}(z-i)^{2}+ a_{1}(z-i)+a_{0}
+    \end{align*}
+    Es ist sofort klar, dass $a_{2}=3$ und $a_{0}=f_{1}(i)=2$. Für $a_{1}$ ist
+    $a_{1}= f_{1}'(i)=6i$. Für $f_{2}=\frac{1}{z+1}= \frac{1}{(z-i)+1+i}=
+    \frac{1}{1+i} \frac{1}{\frac{z-i}{1+i} +1}= \frac{1}{1+i} \frac{1}{1-
+    (-\frac{z-i}{1+i})}= \frac{1}{1+i} \sum_{n=0}^{\infty} (-1)^{n}
+    \frac{1}{(1+i)^{n}} (z-i)^{n} =\sum_{n=0}^{\infty} (-1)^{n}
+    \frac{1}{(1+i)^{n+1}} (z-i)^{n}$ mit $\abs{\frac{z-i}{1+i}}=
+    \abs{\frac{z-i}{\sqrt{2}}}<1$, also $\abs{z-i}<\sqrt{2}$. Dies ist
+    funktionentheoretisch sofort klar. Denn wir entwickeln um $z_{0}=i$ und
+    die Singularität ist bei $-1$. Der Abstand zwischen den Punkte ist genau
+    $\sqrt{2}$.
+
+    Wir haben also
+    \begin{align*}
+      f & =f_{1}f_{2} = \sum_{n=0}^{\infty}
+    3\frac{(-1)^{n}}{(1+i)^{n+1}} (z-i)^{n+2} + \sum_{n=0}^{\infty} 6i
+    \frac{(-1)^{n}}{(1+i)^{n+1}} (z-i)^{n+1}+ \sum_{n=0}^{\infty} (-2)
+    \frac{(-1)^{n}}{(1+i)^{n+1}} (z-i)^{n}\\
+      &= \sum_{n=2}^{\infty} \frac{(-1)^{n}}{(1+i)^{n+1}} (z-i)^{n}+
+	 \sum_{n=1}^{\infty} 6i \frac{(-1)^{n-1}}{(1+i)^{n}} (z-i)^{n} +
+	 \sum_{n=0}^{\infty} (-2)\frac{(-1)^{n}}{(1+i)^{n+1}} (z-i)^{n}\\
+      &= \frac{-2}{1+i} +\frac{2}{(1+i)^{2}}(z-i)+\frac{6i}{1+i}(z-i)+
+	 \sum_{n=2}^{\infty}\left(3(1+i)^{2}- 6i(1+i)-2
+	 \right)\frac{(-1)^{n}}{(1+i)^{n+1}} (z-i)^{n}
+    \end{align*}
+    Es ist nun weiter, $-\frac{2}{1+i}= -\frac{2(1-i)}{1-i^{2}}= -(1-i)= i-1,
+    (1+i)^{2}= 2i,
+    \frac{2}{(1+i)^{2}}+\frac{6i}{1+i}=\frac{2+6i(1+i)}{(1+i)^{2}}=
+    \frac{-4+6i}{2i}= \frac{-2+3i}{i}= (-2+3i)(-i)= 2i+3$. Wenn wir oben
+    fortsetzen, ergibt sich:
+    \begin{align*}
+      f &= i-1 +(3+2i)(z-i)+4 \sum_{n=2}^{\infty} \frac{(-1)^{n}}{(1+i)^{n+1}}
+	 (z-i)^{n}
+    \end{align*}
    \item $f(z)= \frac{z^{2}}{(z+i)(z-i)^{2}}, z_{0}=0$
   \end{enumerate}
 
