Definition des Limes korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1635 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -284,11 +284,12 @@ Der Raum $(\C, \abs{\cdot}, +)$ ist ein normierter Raum mit der Betragsfunktion
 \end{gather*}
 
 \begin{defini}
-  Sei $U$ eine Umgebung von $a \in \C$ und  $U \setminus \{a\} \subset D_f$.
+  Sei $U$ eine Umgebung von $a \in \C$ und  $U \setminus \{a\} \subset D_f$
+  bzw. $a$ ein Häufungspunkt von $D(f)$. Dann ist
 \begin{gather*}
   \lim_{z \rightarrow a} f(z) = b \Leftrightarrow \forall
      \{z_n\}^{\infty}_{n=0} \subset U \setminus \{a\}\colon z_n \xrightarrow{n
-     \rightarrow \infty} a \Rightarrow f(z_n) \xrightarrow{n \rightarrow
+     \rightarrow \infty} a \Rightarrow \lim_{z \rightarrow \infty} f(z_n) \xrightarrow{n \rightarrow
      \infty} b
 \end{gather*}
 \end{defini}
