--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -647,7 +647,7 @@ Dann gilt,
   \end{enumerate}
 \end{bemerk}
 
-\begin{satz}[Integralabschätzung]
+\begin{satz}[Integralabschätzung]\label{satz:24}
   Falls $\abs{f(z)} \leq M$ auf dem ganzen Weg $\gamma$ ist, dann gilt:
 \begin{gather*}
 	\abs[\big]{\int_{\gamma} f(z)\,dz} \leq M \cdot L(\gamma)
@@ -909,7 +909,7 @@ Dann gilt,
 
 \section{Analytische Funktionen}
 
-\begin{satz}
+\begin{satz}\label{satz:31}
   Sei
   \begin{gather*}
     f(z) := \sum^{\infty}_{n=0} a_n (z - z_0)^n
@@ -982,7 +982,7 @@ Dann gilt,
   \end{enumerate}
 \end{bemerk}
 
-\begin{satz}[Identitätssatz für analytische Funktionen]
+\begin{satz}[Identitätssatz für analytische Funktionen]\label{satz:34}
   Seien $f$ und $g$ analytisch auf $\Omega$ und es gelte $f(z_n) = g(z_n)$ für
   eine Folge $\{z_n\}^{\infty}_{n=1} \subset \Omega \setminus \{z_0\}$ mit
   $z_n \xrightarrow{n \rightarrow \infty} z_0$, wobei $z_0 \in \Omega$. Dann
@@ -1074,13 +1074,13 @@ dann ist $f\equiv g$ in $\Omega$.
 Sei $f$ holomorph in einem sternförmigen (oder allgemeiner einfachem) Gebiet
 $\Omega$ und $\gamma$ ein geschlossener Weg. Dann folgt:
 \begin{gather}
-  \label{eq:1}
+  \label{eq:31}
      \int_{\gamma} f(z)\,dz=0
 \end{gather}
 Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
 
 \begin{folg}
-  Die \autoref{eq:1} gilt auch für einfach gelagerten Weg $\gamma$, d.\,h.
+  Die \autoref{eq:31} gilt auch für einfach gelagerten Weg $\gamma$, d.\,h.
   $\gamma\subset\Omega'\subset\Omega$ mit $\Omega'$ einfach.
 \end{folg}
 
@@ -1159,26 +1159,303 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
 \end{satz}
 
 %satz 3
-\begin{satz}[Potenzreihenentwicklung holomorpher Funktionen]
+\begin{satz}[Potenzreihenentwicklung holomorpher Funktionen]\label{satz:43}
   Sei $f$ holomorph in $\Omega$, also eine $C^{1}$"~Funktion. Dann folgt:
   \begin{enumerate}[a)]
    \item $f$ ist in $\Omega$ analytisch ($\Rightarrow C^{\infty}(\Omega)$)
    \item $f(z)= \sum_{k=0}^{\infty} a_{n}(z-z_{0})^{n}$ ist
     Potenzreihenentwicklung um $z_{0}\in\Omega\Rightarrow$ Konvergenzradius
     dieser Reihe mindestens $R=\abs{(z_{0},\partial\Omega)}$ und
-    \begin{gather*}
+    \begin{gather}\label{eq:21}
       a_{n}= \frac{f^{(n)}(z_{0})}{n!}= \frac{1}{2\pi i} \int_{C_{r}(z_{0})}
 	 \frac{f(z)}{(z-z_{0})^{n+1}}\,dz\qquad\forall r\colon 0<r<R
-    \end{gather*}
+    \end{gather}
     Obiges bezeichnet man als \highl{\textsc{Cauchy}"~Formeln}.
   \end{enumerate}
 \end{satz}
 
 \begin{bemerk}
   Im Reellen gibt es keinen, dazu äquivalenten Satz. Eine $C^{1}$"~Funktion in
-  $(a,b)\nRightarrow f\in C^{\infty}(a,b)$.
+  $(a,b)\nRightarrow f\in C^{\infty}(a,b)$. Betrachten wir beispielsweise die
+  Funktion
+  \begin{gather*}
+    f(x)=
+       \begin{cases}
+	 x^{2} & x>0\\
+	 0 & x\leq0
+       \end{cases}
+       \qquad
+       f'(x)=
+       \begin{cases}
+	 2x & x>0\\
+	 0 & \leq0
+       \end{cases}
+  \end{gather*}
+  Die Ableitung ist stetig, also $f\in C^{1}(\R)$. Doch $f''$ ist in $x=0$
+  nicht differenzierbar, also $f\notinC^{2}(\R)$.
+
+  Es gibt sogar $C^{\infty}$"~Funktionen im Reellen, die trotzdem nicht
+  analytisch sind. Ein Beispiel dafür ist:
+  \begin{gather*}
+    f(x)=
+       \begin{cases}
+	 e^{-\frac{1}{x^{2}}} & x\neq0\\
+	 0 & x=0
+       \end{cases}
+  \end{gather*}
+  Es ist $f\in C^{\infty}(\R)$, aber in $x=0$ nicht analytisch. Denn wäre
+  $f(x)= \sum_{k=0}^{\infty} a_{k}x^{k}$, so wäre insbesondere $a_{k} =
+  \frac{f^{(k)}(0)}{k!}= 0$. Das heißt, in einer $\epsilon$"~Umgebung um 0
+  wäre $f(x)\equiv0$. Das ist ein Widerspruch.
 \end{bemerk}
 
+\begin{satz}[Identitätssatz für holomorphe Funktionen]
+  Seien $f,g$  holomorph auf $\Omega$ und $z_0 \in \Omega$. Weiterhin gelte
+  $f(z_n) = g(z_n)$ für eine Folge $\{z_n\}^{\infty}_{n=1} \subset \Omega
+  \setminus \{z_0\}$ mit $z_n \xrightarrow{n \rightarrow \infty} z_0$. Dann
+  gilt $f \equiv g$ auf $\Omega$.
+  \begin{proof}
+    Da $f$ und $g$ holomorph auf $\Omega$ sind, folgt aus
+    \autoref{satz:43}~(i), dass $f$ und $g$ auch analytisch auf $\Omega$ sind.
+    Der \autoref{satz:34} liefert dann die gewünschte Behauptung.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Es kann nur eine holomorphe Fortsetzung der reellen Funktion $e^x$
+    ins Komplexe geben, da die beiden in ganz $\R$ übereinstimmen müssen.
+    Diese Fortsetzung lautet:
+    \begin{gather*}
+      e^z = e^{x+iy}= e^{x}(\cos y+i\sin y)=\sum^{\infty}_{n=0} \frac{z^n}{n!}
+    \end{gather*}
+    Denn betrachten wir die holomorphe Funktion $f(z)=e^{z}$ mit $z\in\C$.
+    Diese stimmt mit $e^{x}$ f+r $x\in\R$ überein. Ist
+    $g\colon\C\rightarrow\C$ ebenfalls holomorph, so wählen wir eine beliebige
+    in $\R$ konvergente Punktfolge $(z_{n})\subset\R, z_{n}\rightarrow
+    z_{0}\in\R$. Dann ist $g(z_{n})=f(z_{n})$. Also gilt nach dem obigen Satz
+    die Identität.
+   \item Gleiches gilt für die komplexen Fortsetzungen der reellen Funktionen
+    $\sin(x)$ und $\cos(x)$:
+    \begin{gather*}
+      \sin(z) = \sum^{\infty}_{n=0} (-1)^n \frac{z^{2n+1}}{(2n+1)!} \qquad \cos(z) = \sum^{\infty}_{n=0} (-1)^n \frac{z^{2n}}{(2n)!}
+    \end{gather*}
+   \item Damit gelten die aus dem Reellen bekannten Additionstheoreme auch im
+    Komplexen.
+   \item Die einzige holomorphe Fortsetzung von $\ln(1 + x)$ für $x < 1$ aus
+    dem Reellen ins Komplexe lautet:
+    \begin{gather*}
+      \ln(1 + z) = \sum^{\infty}_{n=1} (-1)^{n+1} \frac{z^n}{n} \qquad \forall \, |z| < 1
+    \end{gather*}
+  \end{enumerate}
+\end{bemerk}
+
+\begin{defini}
+  Eine auf ganz $\C$ holomorphe Funktion heißt \highl[Funktion!ganze]{ganze
+  Funktion}. Insbesondere gilt für ganze Funktionen $f(z)= \sum_{n=0}^{\infty}
+  a_{n} z^{n}$ mit $z\in\C$. Der Konvergenzradius ist $R=\infty$.
+\end{defini}
+
+\begin{bsp}
+  Polynome, $e^{z}, \sin, \cos$ sind ganze Funktionen.
+\end{bsp}
+
+\begin{satz}[Satz über Potenzreihen]\label{satz:51}
+  Für $z_0 \in \C$ und ein fixiertes $R > 0$ sei die Potenzreihe
+  \begin{gather*}
+    f(z) := \sum^{\infty}_{n=0} a_n (z - z_0)^n \qquad \forall \abs{z - z_0} <
+       R
+  \end{gather*}
+  gegeben. Weiter setzen wir $M(f,r) := \max \{\abs{f(z)}\colon\abs{z - z_0} =
+  r\}$ für $0 < r < R$. Dann gilt:
+  \begin{gather*}
+	\abs{a_n} \leq \frac{M(f,r)}{r^n} \quad \forall n \in \N
+  \end{gather*}
+  \begin{proof}
+    Aus der Cauchyschen Integralformel (\autoref{eq:21}) \help{oder sind das
+    die Cauchy"=Formeln?} und \autoref{satz:24}
+    folgt:
+    \begin{align*}
+      \abs{a_n} &= \abs[\big]{\frac{1}{2\pi i} \int_{C_r(z_0)} \frac{f(z)}{(z
+	 - z_0)^{n+1}}\,dz} = \abs[\big]{\frac{1}{2\pi i}} \cdot
+	 \abs[\big]{\int_{C_r(z_0)} \frac{f(z)}{(z - z_0)^{n+1}}\,dz}\\
+      &\leq \abs[\big]{\frac{-i}{2\pi}} \int_{C_r(z_0)} \abs{\frac{f(z)}{(z -
+	 z_0)^{n+1}}}\,dz \leq \frac{1}{2\pi} \cdot L(C_r(z_0)) \cdot
+	 \frac{M(f,r)}{\abs{r^{n+1}}}\\
+      &= \frac{1}{2\pi} \cdot 2\pi r \cdot \frac{M(f,r)}{r^{n+1}} =
+	 \frac{M(f,r)}{r^n}
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+\begin{satz}[Satz von Liouville]\label{satz:52}
+  Jede beschränkte ganze Funktion ist konstant. Insbesondere gilt: Jede ganze,
+  nicht konstante Funktion ist nicht beschränkt.
+  \begin{proof}
+    Es gelte $\abs{f(z)} \leq M$ für eine ganze Funktion $f$. Wir können
+    o.\,B.\,d.\,A. den Entwicklungspunkt $z_0 = 0$ für $f$ annehmen. Dann gilt
+    für ein beliebiges $r > 0$, dass $f$ die Darstellung $f(z) =
+    \sum^{\infty}_{n=0} a_n z^n$ für alle $0 < \abs{z} < r$ hat. Mit Hilfe von
+    \autoref{satz:51} lässt sich nun folgern, $\abs{a_n}\leq \frac{M}{r^n}$
+    für alle $n \in \N$. Der Grenzübergang $r \rightarrow \infty$ liefert
+    dann: $a_n = 0$ für alle $n \in \N\setminus \{0\}$. Eingesetzt in die
+    Potenzreihenentwicklung von $f$ folgt die Behauptung $f(z) = a_0$.
+  \end{proof}
+\end{satz}
+
+\begin{bsp}
+  Da die Sinusfunktion im Reellen nicht konstant ist, muss sie im Komplexen
+  unbeschränkt sein.
+\end{bsp}
+
+\begin{satz}[Fundamentalsatz der Algebra]
+  Wenn $p$ ein nicht-konstantes Polynom mit komplexen Koeffizienten ist, dann
+  hat $p$ wenigstens eine Nullstelle in $\C$. Daraus folgt der Fundamentalsatz
+  der Algebra: $p$ lässt sich als Produkt linearer Faktoren schreiben.
+  \begin{proof}
+    Sei $p(z) = a_0+\dotsb+ a_nz^n$ mit $a_n \neq 0$ für $n \in \N\setminus
+    \{0\}$. Dann gilt:
+    \begin{gather*}
+	\abs{\frac{p(z)}{z^n}} = \frac{\abs{a_0}}{\abs{z}^n} +
+	 \frac{\abs{a_1}}{\abs{z}^{n-1}} +\dotsb+
+	 \frac{\abs{a_{n-1}}}{\abs{z}} + \abs{a_n}
+     \end{gather*}
+    Damit folgt im Grenzwert:
+    \begin{gather*}
+      \lim_{\abs{z}\rightarrow\infty} \abs[\big]{\frac{p(z)}{z^n}} = \abs{a_n}
+	 > 0
+    \end{gather*}
+    Für ein ausreichend großes $R>0$ gilt daher aber auch:
+    \begin{gather*}
+      \abs[\big]{\frac{p(z)}{z^n}} \geq \frac{\abs{a_n}}{2} > 0 \qquad \forall
+	 \abs{z} > R
+    \end{gather*}
+    Durch einfaches Umstellen erhalten wir damit:
+    \begin{gather}\label{eq:51}
+      \frac{1}{p(z)} \leq \frac{2}{\abs{a_n}} \cdot \frac{1}{\abs{z}^n} \leq
+	 \frac{2}{\abs{a_n}R^n} =: M \qquad \forall \abs{z} > R
+    \end{gather}
+    Wir nehmen nun an, dass $p(z) \neq 0$ für alle $z \in \C$ wäre. Dann wäre
+    $f := \frac{1}{p}$ eine ganze Funktion, weil $p$ als Polynom eine ganze
+    Funktion darstellt. Außerdem wäre $f$ beschränkt für $\abs{z} \leq R$,
+    weil $f$ stetig ist und $f$ wäre beschränkt für $\abs{z}\geq R$ wegen
+    \autoref{eq:51}. Damit ist $f$ eine beschränkte ganze Funktion und wegen
+    \autoref{satz:52} somit konstant. Damit ist aber auch $p$ konstant.
+    $\lightning$ zur Voraussetzung. Deshalb war die Annahme falsch und $p$ hat
+    wenigstens eine Nullstelle in $\C$.
+  \end{proof}
+\end{satz}
+
+\begin{satz}[Satz von Morera]\label{satz:54}
+  Sei $f$ in $\Omega$ stetig und gelte $\int_{\gamma} f(z)\,dz = 0$ für jeden
+  einfach gelagerten, geschlossenen Weg\footnote{Es genügt sogar, dass das für
+  jeden geschlossenen, in einem sternförmigen Gebiet $\Omega'\subset\Omega$
+  liegenden Weg gilt.} $\gamma$ in $\Omega$. Dann ist $f$ holomorph auf
+  $\Omega$.
+  \begin{proof}
+    Sei $K_r(z_0)\subset\Omega$ eine beliebige Kreisscheibe, welche
+    trivialerweise sternförmig ist. Nach Vorraussetzung gilt, $\int_{\gamma}
+    f(z)\,dz = 0$ für alle in $K_r(z_0)$ liegenden, geschlossenen und einfach
+    gelagerten $\gamma$. Damit gilt für einen beliebigen Weg $\gamma' \in
+    K_r(z_0)$, dass $\int_{\gamma'} f(z)\,dz$ wegunabhängig ist. Nach
+    \autoref{satz:27} besitzt $f$ nun eine Stammfunktion $F$ auf $K_r(z_0)$,
+    die außerdem noch holomorph ist. Wegen \autoref{satz:43} ist $F$ damit
+    auch analytisch auf $K_r(z_0)$. Mit einer obigen Folgerung folgt nun, dass
+    $F$ alle Ableitungen besitzt, welche selber wieder holomorph sind. Damit
+    ist im Speziellen $f = F'$ holomorph auf jeder Kreisscheibe $K_r(z_0)
+    \subset \Omega$, also auf ganz $\Omega$.
+  \end{proof}
+\end{satz}
+
+\begin{satz}[Satz über Vertauschung von Differentiation und Grenzübergang]
+  Sei $\{f_n\}^{\infty}_{n=0}$ eine Folge von in $\Omega$ holomorphen
+  Funktionen, die kompakt gegen $f$ konvergieren. Dann ist auch $f$ holomorph
+  in $\Omega$ und für jedes $k \in \N$ gilt: $f^{(k)}_n (z)
+  \xrightarrow{\text{kompakt}} f^{(k)} (z)$.
+  \begin{proof}
+    Wir zeigen zunächst, dass $f$ holomorph in $\Omega$ ist. Dazu sei $\gamma$
+    ein einfach gelagerter geschlossener Weg in $\Omega$. Dann gilt wegen
+    \autoref{eq:31} und der dazugehörigen Aussage für jede auf $\Omega$
+    holomorphe Funktion $\int_{\gamma} f_n(z)\,dz = 0$. Aus der kompakten
+    Konvergenz von $\{f_n\}^{\infty}_{n=0}$ folgt (wie aus Analysis~2
+    bekannt), dass $f$ stetig ist. Die Vertauschbarkeit von Grenzübergang und
+    Integration folgt aus \autoref{satz:29} und damit folgt auch
+    $\int_{\gamma} f(z)\,dz = \int_{\gamma} \lim_{n \rightarrow \infty}
+    f_n(z)\,dz = \lim_{n \rightarrow \infty} \int_{\gamma} f_n(z)\,dz = 0$.
+
+    Wegen \autoref{satz:54} gilt nun, dass auch $f$ holomorph auf $\Omega$ ist.
+    Bleibt noch die Aussage über die kompakte Konvergenz der Ableitungen zu
+    zeigen. Dazu sei $K \subset \Omega$ eine beliebige kompakte Menge. Wir
+    setzen $r := \frac{1}{2}\dist(K, \partial \Omega)$ und weiterhin $K_r :=
+    \{z \in \C\colon \dist(z, K) \leq r\}$. Dann gilt $K \subset K_r \subset
+    \Omega$ und $K_r$ wieder eine kompakte Menge. Weiterhin sei ein $z_0 \in
+    K$ fixiert, dann folgt aus \autoref{satz:43} mit den Cauchy-Formeln und
+    der Additivität des Integrals:
+    \begin{gather*}
+      f^{(k)}(z_0) - f^{(k)}_n(z_0) = \frac{k!}{2\pi i} \int_{C_r(z_0)}
+	 \frac{f(z) - f_n(z)}{(z - z_0)^{k+1}}\,dz
+    \end{gather*}
+    Damit gilt dann unter Verwendung von \autoref{satz:24} folgende
+    Abschätzung:
+    \begin{align*}
+      \abs[\big]{f^{(k)}(z_0) - f^{(k)}_n(z_0)} &\leq \frac{k!}{\abs{2\pi i}}
+	 \cdot \frac{L(C_r(z_0))}{r^{k+1}} \cdot \max_{z \in C_r(z_0)}
+	 \abs{f(z) - f_n(z)}\\
+      &= \frac{k!}{2\pi} \cdot \frac{2\pi r}{r^{k+1}} \cdot \max_{z \in
+	 C_r(z_0)} \abs{f(z) - f_n(z)}\\
+      &= \frac{k!}{r^k} \cdot \max_{z \in C_r(z_0)} \abs{f(z) - f_n(z)}
+    \end{align*}
+    Und damit gilt auch $f^{(k)}_n \xrightarrow{n \rightarrow \infty} f^{(k)}$
+    gleichmäßig auf $K$.
+  \end{proof}
+\end{satz}
+
+\begin{folg}
+  Eine kompakt konvergente Reihe aus holomorphen Funktionen ist beliebig oft
+  gliedweise differenzierbar.
+\end{folg}
+
+\begin{folg}
+  Es sei $f$ stetig auf $\Omega$. Dann sind folgende Aussagen äquivalent:
+  \begin{enumerate}
+   \item $f$ ist holomorph auf $\Omega$.
+   \item $f$ ist analytisch auf $\Omega$.
+   \item $f(x + iy) = u(x,y) + iv(x,y)$ mit $u,v \in C^1(\Omega)$ und $u_x =
+    v_y$ sowie $u_y = -v_x$.
+   \item $\int_{\gamma} f(z)\,dz = 0$ für jeden einfach gelagerten,
+    geschlossenen Weg $\gamma$ in $\Omega$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(i)$\Rightarrow$(ii)] gilt wegen \autoref{satz:43}
+     \item[(ii)$\Rightarrow$(i)] gilt wegen \autoref{satz:31}
+     \item[(i)$\Rightarrow$(iii)] gilt wegen \autoref{satz:15}
+     \item[(i)$\Rightarrow$(iv)] gilt wegen \autoref{folg:21}
+     \item[(iv)$\Rightarrow$(i)] gilt wegen \autoref{satz:54}
+    \end{itemize}
+  \end{proof}
+\end{folg}
+
+\begin{bemerk}
+  Im Reellen gilt die Aussage "`$f \in C^1(\Omega) \Rightarrow f$ ist in
+  Potenzreihe entwickelbar"' übrigens nicht! Ein Gegenbeispiel dazu ist:
+  \begin{gather*}
+    f(x) =
+       \begin{cases}
+	 e^{-\frac{1}{x^2}} & x \neq 0 \\
+	 0   &  x = 0
+	\end{cases}
+  \end{gather*}
+  Hier gilt $f \in C^{\infty}(\R)$ und außerdem $f^{(k)}(0) = 0$ für alle $k
+  \in \N$. Damit kann $f$ in $x_0 = 0$ nicht in eine Potenzreihe entwickelt
+  werden. Wenn überhaupt, muss die Potenzreihenentwicklung mit der
+  Taylor-Reihe in einer Umgebung von $x_0 = 0$ übereinstimmen. Es gilt aber
+  für alle $x \in ]-\epsilon, \epsilon[ \setminus \{0\}$:
+  \begin{gather*}
+    0 \neq f(x) = \sum^{\infty}_{k=0} \frac{f^{(k)}(0)}{k!} (x - 0)^k =
+       \sum^{\infty}_{k=0} \frac{0}{k!} x^k = \sum^{\infty}_{k=0} 0 = 0
+  \end{gather*}
+\end{bemerk}
 
 \clearpage
 \appendix
