--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -387,7 +387,7 @@ Wir haben hier die geometrische Reihe angewendet, da $\abs{z} \in \R$ und
   \end{proof}
 \end{satz}
 
-\section{Differenzierung}
+\chapter{Differenzierung}
 
 \begin{defini}
   Sei $a \in D_f$. Dann heißt $f$ an der Stelle $a$ \highl{differenzierbar},
@@ -558,7 +558,7 @@ Man schreibt statt $f'(a)$ auch gerne $\frac{df}{dz}(a)$.
   \end{proof}
 \end{satz}
 
-\section{Komplexe Kurvenintegrale}
+\chapter{Komplexe Kurvenintegrale}
 
 %bem 1
 \begin{bemerk}
@@ -907,7 +907,7 @@ Dann gilt,
   \end{proof}
 \end{satz}
 
-\section{Analytische Funktionen}
+\chapter{Analytische Funktionen}
 
 \begin{satz}\label{satz:31}
   Sei
@@ -1132,7 +1132,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
 \end{defini}
 
 %nr 16.4
-\section{\textsc{Cauchy}sche Integralformel}
+\chapter{\textsc{Cauchy}sche Integralformel}
 
 %satz1
 \begin{satz}[\textsc{Cauchy}sche Integralformel für Kreise]
