zwei Fehler ausgebessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1639 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -1192,7 +1192,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
        \end{cases}
   \end{gather*}
   Die Ableitung ist stetig, also $f\in C^{1}(\R)$. Doch $f''$ ist in $x=0$
-  nicht differenzierbar, also $f\notinC^{2}(\R)$.
+  nicht differenzierbar, also $f\notin\C^{2}(\R)$.
 
   Es gibt sogar $C^{\infty}$"~Funktionen im Reellen, die trotzdem nicht
   analytisch sind. Ein Beispiel dafür ist:
@@ -1386,8 +1386,8 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
     Wegen \autoref{satz:54} gilt nun, dass auch $f$ holomorph auf $\Omega$ ist.
     Bleibt noch die Aussage über die kompakte Konvergenz der Ableitungen zu
     zeigen. Dazu sei $K \subset \Omega$ eine beliebige kompakte Menge. Wir
-    setzen $r := \frac{1}{2}\dist(K, \partial \Omega)$ und weiterhin $K_r :=
-    \{z \in \C\colon \dist(z, K) \leq r\}$. Dann gilt $K \subset K_r \subset
+    setzen $r := \frac{1}{2}\text{dist}(K, \partial \Omega)$ und weiterhin $K_r :=
+    \{z \in \C\colon \text{dist}(z, K) \leq r\}$. Dann gilt $K \subset K_r \subset
     \Omega$ und $K_r$ wieder eine kompakte Menge. Weiterhin sei ein $z_0 \in
     K$ fixiert, dann folgt aus \autoref{satz:43} mit den Cauchy-Formeln und
     der Additivität des Integrals:
