Das Paket index statt makeidx verwenden
Das Paket index definiert den Befehl \index robust, so dass er auch
innerhalb von selbstdefinierten Befehlen verwendet werden kann, wie in
\highl.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1643 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -27,7 +27,7 @@
 
 \usepackage{ifthen}
 \usepackage{mathrsfs}  % \mathscr
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage[final]{graphicx}
 \usepackage{xcolor}
 \usepackage{tikz}
