--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -10080,7 +10080,7 @@ A^{n}(Ax)\in R(A^{n})$.
     $(\id-K)^{-1}\in \linOp(X)$, d.\,h. $\id-K$ ist surjektiv und
     $(\id-K)^{-1}$ ist beschränkt (stetig).
    \item Ist der inverse Operator $(\id-K)^{-1}$ nicht injektiv, so ist der
-    Nullraum von $N-K$ nicht Null ($\dim N(\id-K) <\infty$) und $R(\id-K)\subsetneq X$
+    Nullraum von $\id-K$ nicht Null ($\dim N(\id-K) <\infty$) und $R(\id-K)\subsetneq X$
     ein echter (abgeschlossener) Teilraum.
   \end{enumerate}
 
