Auf die neuen Kontakte des Projekts umstellen
Wir sind zur LUG Jena umgezogen und führen das Projekt dort fort. Damit haben
sich sowohl die Adresse der Webseite, als auch die der Mailingliste
geändert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1688 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -122,7 +122,7 @@
   genannten Personen eine Haftung übernommen. Es steht jeder Person frei,
   dieses Dokument zu lesen, zu verändern oder auf anderen Medien verfügbar zu
   machen, solange ein Verweis auf die Internetadresse des Projekts
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/} enthalten ist.
+  \url{http://uni-skripte.lug-jena.de/} enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
   \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts
@@ -131,7 +131,7 @@
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>} senden. Weitere Informationen sind
+  \texttt{<uni-skripte@lug-jena.de>} senden. Weitere Informationen sind
   unter der oben genannten Internetadresse verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt haben,
