Auf die neuen Kontakte des Projekts umstellen
Wir sind zur LUG Jena umgezogen und führen das Projekt dort fort. Damit haben
sich sowohl die Adresse der Webseite, als auch die der Mailingliste
geändert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1693 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -226,9 +226,9 @@
   Dieses Dokument wurde als Skript für die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
   Projekts
-  "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}
+  "`\href{http://uni-skripte.lug-jena.de/}
   {Vorlesungsskripte der Fakultät für Mathematik}
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
+  \href{http://uni-skripte.lug-jena.de/}{und Informatik}"'
   weiter betreut. Das
   Dokument wurde nach bestem Wissen und Gewissen angefertigt. Denoch
   garantiert weder der auf der Titelseite genannte Dozent, die Personen,
@@ -238,7 +238,7 @@
   übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
   verändern oder auf anderen Medien verfügbar zu machen, solange ein
   Verweis auf die Internetadresse des Projekts
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/}
+  \url{http://uni-skripte.lug-jena.de/}
   enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
@@ -248,8 +248,8 @@
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \texttt{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
