--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -180,9 +180,9 @@
 \begin{itshape}
   Dieses Dokument wurde als Skript für die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
-  Projekts "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}%
+  Projekts "`\href{http://uni-skripte.lug-jena.de/}%
                   {Vorlesungsskripte der Fakultät für Mathematik}
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
+  \href{http://uni-skripte.lug-jena.de/}{und Informatik}"'
   weiter betreut. Das Dokument wurde nach bestem Wissen und Gewissen
   angefertigt. Dennoch garantiert weder der auf der Titelseite genannte Dozent,
   die Personen, die an dem Dokument mitgewirkt haben, noch die Mitglieder des
@@ -190,7 +190,7 @@
   wird von keiner der genannten Personen eine Haftung übernommen. Es steht
   jeder Person frei, dieses Dokument zu lesen, zu verändern oder auf anderen
   Medien verfügbar zu machen, solange ein Verweis auf die Internetadresse des
-  Projekts \url{http://www.minet.uni-jena.de/~joergs/skripte/} enthalten ist.
+  Projekts \url{http://uni-skripte.lug-jena.de/} enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
   vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist auf der Webseite
@@ -199,8 +199,8 @@
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \texttt{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
