--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -82,7 +82,7 @@
 \chapter*{Vorwort}
 {\itshape
   Dieses Skript ist im Rahmen des
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{Projekts
+  \href{http://uni-skripte.lug-jena.de/}{Projekts
   "`Vorlesungsskripte der Fakultät für Mathematik und Informatik"'}
   entstanden und wird im Rahmen dieses Projekts weiter betreut. Das
   Skript ist nach bestem Wissen und Gewissen entstanden. Dennoch
@@ -92,7 +92,7 @@
   übernommen. Es steht jeder Person frei, dieses Skript zu lesen, zu
   verändern oder auf anderen Medien verfügbar zu machen und es an andere zu
   verteilen, solange ein Verweis die Internetadresse des Projekts
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/} enthalten ist.
+  \url{http://uni-skripte.lug-jena.de/} enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist
   vom \SVNDate{}. Eine aktuellere Ausgabe könnte auf der oben genannten
@@ -102,8 +102,8 @@
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
   bzw. zu melden oder selbst
   einzupflegen -- einfach eine E"~Mail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \texttt{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse des Projekts verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
