--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -292,7 +292,7 @@
 {\itshape
 
   Dieses Skript ist im Rahmen des
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{Projekts
+  \href{http://uni-skripte.lug-jena.de/}{Projekts
   "`Vorlesungsskripte der Fakultät für Mathematik und Informatik"'}
   entstanden und wird im Rahmen dieses Projekts weiter betreut. Das
   Skript ist nach bestem Wissen und Gewissen entstanden. Denoch
@@ -302,18 +302,18 @@
   übernommen. Es steht jeder Person frei, dieses Skript zu lesen, zu
   verändern oder auf anderen Medien verfügbar zu machen, solange ein
   Verweis die Internetadresse
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/} des Projekts
+  \url{http://uni-skripte.lug-jena.de/} des Projekts
   enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
   vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist im Verzeichnis
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/pdf/}{PDF} verfügbar.
+  \href{http://uni-skripte.lug-jena.de/pdf/}{PDF} verfügbar.
 
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
   einzupflegen -- einfach eine eMail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \texttt{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse des Projekts verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
