Auf die neuen Kontakte des Projekts umstellen
Wir sind zur LUG Jena umgezogen und führen das Projekt dort fort. Damit haben
sich sowohl die Adresse der Webseite, als auch die der Mailingliste
geändert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1706 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-dml2/dml2.latex
+++ b/vogel-dml2/dml2.latex
@@ -121,7 +121,7 @@
 \chapter*{Vorwort}
 {\itshape
   Dieses Skript ist im Rahmen des
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{Projekts
+  \href{http://uni-skripte.lug-jena.de/}{Projekts
   "`Vorlesungsskripte der Fakultät für Mathematik und Informatik"'}
   entstanden und wird im Rahmen dieses Projekts weiter betreut. Das
   Skript ist nach bestem Wissen und Gewissen entstanden. Denoch
@@ -131,7 +131,7 @@
   übernommen. Es steht jeder Person frei, dieses Skript zu lesen, zu
   verändern oder auf anderen Medien verfügbar zu machen, solange ein
   Verweis die Internetadresse
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/} des Projekts
+  \url{http://uni-skripte.lug-jena.de/} des Projekts
   enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
@@ -141,8 +141,8 @@
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \texttt{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
