--- a/schumacher-statver/skript.ltx
+++ b/schumacher-statver/skript.ltx
@@ -186,39 +186,40 @@
 \chapter*{Vorwort}
 
 {\itshape
-  Dieses Dokument wurde als Skript für die auf der
+  Dieses Dokument wurde als Skript fÃ¼r die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
   Projekts
-  "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}
-  {Vorlesungsskripte der Fakultät für Mathematik}
-  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
+  "`\href{http://uni-skripte.lug-jena.de/}
+  {Vorlesungsskripte der FakultÃ¤t fÃ¼r Mathematik}
+  \href{http://uni-skripte.lug-jena.de/}{und Informatik}"'
   weiter betreut. Das
   Dokument wurde nach bestem Wissen und Gewissen angefertigt. Dennoch
   garantiert weder der auf der Titelseite genannte Dozent, die Personen,
   die an dem Dokument mitgewirkt haben, noch die
-  Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
+  Mitglieder des Projekts fÃ¼r dessen Fehlerfreiheit. FÃ¼r etwaige Fehler
   und dessen Folgen wird von keiner der genannten Personen eine Haftung
-  übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
-  verändern oder auf anderen Medien verfügbar zu machen, solange ein
+  Ã¼bernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
+  verÃ¤ndern oder auf anderen Medien verfÃ¼gbar zu machen, solange ein
   Verweis auf die Internetadresse des Projekts
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/}
+  \url{http://uni-skripte.lug-jena.de/}
   enthalten ist.
 
-  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
-  \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts verfügbar
+  Diese Ausgabe trÃ¤gt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
+  \SVNDate{}. Eine neue Ausgabe kÃ¶nnte auf der Webseite des Projekts verfÃ¼gbar
   sein.
 
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
-  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
+  Fehlerkorrekturen fÃ¼r das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \nolinkurl{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
-  sind unter der oben genannten Internetadresse verfügbar.
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \nolinkurl{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen
+  sind unter der oben genannten Internetadresse verfÃ¼gbar.
 
-  Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
+  Hiermit mÃ¶chten wir allen Personen, die an diesem Skript mitgewirkt
   haben, vielmals danken:
   \begin{itemize}
-   \item \href{mailto:email}{Person \nolinkurl{<email>}} (Jahr)
+   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
+    \nolinkurl{<jens@kubieziel.de>}} (2008)
   \end{itemize}
 }
 
@@ -227,11 +228,11 @@
 \tableofcontents
 
 \clearpage
-\pdfbookmark[0]{Auflistung der Sätze}{theoremlist}
+\pdfbookmark[0]{Auflistung der SÃ¤tze}{theoremlist}
 \chapter*{Auflistung der Theoreme}
 
-\pdfbookmark[1]{Sätze}{satzlist}
-\section*{Sätze}
+\pdfbookmark[1]{SÃ¤tze}{satzlist}
+\section*{SÃ¤tze}
 \theoremlisttype{optname}
 \listtheorems{satz}
 
